--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ p {
     margin-left: 20px;
 }
 
+/* Aside bar */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,49 +87,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-title {
+    margin-bottom: 10px;
+    color: #ffffff;
+    text-align: center;
+}
+
+.benefit-subtitle {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-subtitle h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-subtitle img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
